# a-simple-compiler

./: CMakeLists.txt  MiddleLan.cpp  MiddleLan.h  Node.cpp  Node.h  Parser.cpp  Parser.h  Temp.cpp  Temp.h  syntax_error.h  tag.h
MiddleLanRelated/: MiddleLanOperand.cpp  MiddleLanOperand.h  MiddleSentence.cpp  MiddleSentence.h  Node.cpp  Node.h
middle_lan_related/: MiddleLanOperand.cpp  MiddleLanOperand.h  MiddleSentence.cpp  MiddleSentence.h  Node.cpp  Node.h
symbols_related/: SymbolTable.cpp  SymbolTable.h  SymbolsManager.cpp  SymbolsManager.h  TableManager.cpp  TableManager.h  Type.cpp  Type.h  TypeManager.cpp  TypeManager.h
test/: middle_lan_test.cpp  parser_test.cpp
token_related/: Token.h  Tokenizer.cpp  Tokenizer.h
